--- a/src/pages/NotesPage/NotesPage.module.scss
+++ b/src/pages/NotesPage/NotesPage.module.scss
@@ -7,11 +7,11 @@
 
 .list {
     margin-top: 20px;
-/*     display: grid;
+    display: grid;
     grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
-    gap: 12px; */
-    display: flex;
+    gap: 12px;
+/*     display: flex;
     flex-direction: column;
     gap: 3rem;
-    margin-bottom: 10px;
+    margin-bottom: 10px; */
 }
